fixed card spacing issue

--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -29,9 +29,9 @@ ul {
     font-size: 20px;
 }
 .card {
-    width: 80%
+    width: 80%;
     margin: 40px auto;
     border: 5px solid gray;
-    box-shadow: 5px #888888;
-
-}
+    box-shadow: 5px 10px #888888;
+  }
+  
